--- a/my_diario_digital/pubspec.yaml
+++ b/my_diario_digital/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  google_fonts: ^5.0.0  # Usa la última versión disponible
+  provider: ^6.0.5      # Usa la última versión disponible
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
