--- a/my_diario_digital/android/app/src/main/AndroidManifest.xml
+++ b/my_diario_digital/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:label="my_diario_digital"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB3z775dXhcHd5w3p04rUaBYC1ml8bwgkw"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
