--- a/my_diario_digital/pubspec.yaml
+++ b/my_diario_digital/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   google_fonts: ^5.0.0  # Usa la última versión disponible
   provider: ^6.0.5      # Usa la última versión disponible
+  syncfusion_flutter_calendar: ^27.2.5
+  #flutter_calendar: ^0.1.3 # Usa la última versión disponible
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
