--- a/my_diario_digital/pubspec.yaml
+++ b/my_diario_digital/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.10.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
