--- a/my_diario_digital/pubspec.yaml
+++ b/my_diario_digital/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.10.0
   table_calendar: ^3.1.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
