--- a/my_diario_digital/pubspec.yaml
+++ b/my_diario_digital/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   google_maps_flutter: ^2.10.0
   table_calendar: ^3.1.2
   http: ^1.2.2
-
+  camera: ^0.11.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
