--- a/my_diario_digital/pubspec.yaml
+++ b/my_diario_digital/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   table_calendar: ^3.1.2
   http: ^1.2.2
   camera: ^0.11.0+2
+  sqflite: any
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
