--- a/my_diario_digital/pubspec.yaml
+++ b/my_diario_digital/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_maps_flutter: ^2.10.0
   table_calendar: ^3.1.2
   http: ^1.2.2
+  video_player: ^2.7.0
   camera: ^0.11.0+2
   sqflite: any
   path: any
